# fp-appimage-updater

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CNAME  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README-BR.md  README-LA.md  README.md  copr.spec  fp-appimage-updater.spec  install-github.sh  install-gitlab.sh  install.sh
.copr/: Makefile
.github/: renovate.json
.github/workflows/: build.yml
docs/: .atlas-analysis.json  README.md  docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/cli/: check-update.mdx  init.mdx  manage.mdx  overview.mdx
docs/configuration/: app-recipes.mdx  global-config.mdx  update-strategies.mdx
docs/guides/: delta-updates.mdx  desktop-integration.mdx  github-api-tokens.mdx  github-proxy.mdx  systemd-automation.mdx
docs/it/: index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/it/cli/: check-update.mdx  init.mdx  manage.mdx  overview.mdx
docs/it/configuration/: app-recipes.mdx  global-config.mdx  update-strategies.mdx
docs/it/guides/: delta-updates.mdx  desktop-integration.mdx  github-api-tokens.mdx  github-proxy.mdx  systemd-automation.mdx
docs/it/troubleshooting/: doctor.mdx  faq.mdx
docs/la/: index.mdx  introduction.mdx
docs/la/cli/: manage.mdx
docs/la/configuration/: app-recipes.mdx
docs/la/guides/: delta-updates.mdx  github-proxy.mdx
docs/la/troubleshooting/: faq.mdx
docs/pt-BR/: index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/pt-BR/cli/: check-update.mdx  init.mdx  manage.mdx  overview.mdx
docs/pt-BR/configuration/: app-recipes.mdx  global-config.mdx  update-strategies.mdx
docs/pt-BR/guides/: delta-updates.mdx  desktop-integration.mdx  github-api-tokens.mdx  github-proxy.mdx  systemd-automation.mdx
docs/pt-BR/troubleshooting/: doctor.mdx  faq.mdx
docs/troubleshooting/: doctor.mdx  faq.mdx
examples/: config.yml
examples/apps/: curseforge.yml  dummy-direct.yml  dummy-invalid.yml  hydra-launcher.yml  linuxtoys.yml  obsidian.yml  sioyek.yml  whatpulse.yml  winboat.yml
scripts/: release-bump.sh
scripts/ci/: README.md  lib.sh
scripts/github/: changelog.sh  get-version.sh  release-files.sh  release-meta.sh
scripts/gitlab/: pages.sh  release.sh  sync-homebrew-tap.sh
src/: cli.rs  config.rs  disintegrator.rs  doctor.rs  downloader.rs  extractor.rs  initializer.rs  integrator.rs  lib.rs  lock.rs  main.rs  output.rs  parser.rs  self_updater.rs  state.rs  validator.rs
src/commands/: check.rs  completion.rs  doctor.rs  generate_schema.rs  helpers.rs  init.rs  list.rs  mod.rs  remove.rs  self_update.rs  update.rs  validate.rs
src/downloader/: http.rs  mod.rs  progress.rs
src/output/: human.rs  mod.rs  styling.rs  types.rs
src/resolvers/: direct.rs  forge.rs  mod.rs  script.rs
src/update/: engine.rs  mod.rs
systemd/: fp-appimage-updater.service  fp-appimage-updater.timer
tests/: cli_tests.rs  config_tests.rs  doctor_tests.rs  downloader_tests.rs  extractor_tests.rs  forge_tests.rs  helpers_tests.rs  integrator_tests.rs  lock_tests.rs  parser_tests.rs  remove_tests.rs  resolver_tests.rs  script_tests.rs  self_updater_tests.rs  update_tests.rs
tests/common/: fedora.Dockerfile  mod.rs
(+9 files in other folders)
