[package]
name = "fp-appimage-updater"
version = "1.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"], default-features = false }
tokio = { version = "1.50", features = ["full"] }
directories = "6.0"
comfy-table = "7.2"
anyhow = "1.0"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
rust-ini = "0.21"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link-Time Optimization
codegen-units = 1    # Maximize size optimization efficiency
panic = "abort"      # Remove panic unwinding logic to save space
strip = true         # Strip symbols from binary

[dev-dependencies]
testcontainers = { version = "=0.27.2", features = ["http_wait"] }
testcontainers-modules = "=0.15.0"
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"] }
