[package]
name = "fp-appimage-updater"
version = "1.1.4"
edition = "2024"

[dependencies]
clap = { version = "=4.6", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "color"] }
clap_complete = "=4.6"
serde = { version = "=1.0", features = ["derive"] }
serde_yaml = "=0.9"
serde_json = "=1.0"
ureq = { version = "=3.3.0", default-features = false, features = ["json", "rustls"] }
comfy-table = { version = "=7.2", default-features = false }
anyhow = "=1.0"
glob = "=0.3"
rust-ini = "=0.21"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link-Time Optimization
codegen-units = 1    # Maximize size optimization efficiency
panic = "abort"      # Remove panic unwinding logic to save space
strip = true         # Strip symbols from binary

[dev-dependencies]
testcontainers = { version = "=0.27.2", features = ["http_wait"] }
testcontainers-modules = "=0.15.0"
tokio = { version = "=1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "=0.12", features = ["json"] }
