[package]
name = "fp-appimage-updater"
version = "1.4.0"
edition = "2024"

[dependencies]
pico-args = "=0.5.0"
serde = { version = "=1.0", features = ["derive"] }
serde_yaml = "=0.9"
serde_json = "=1.0"
ureq = { version = "=3.3.0", default-features = false, features = ["json", "rustls"] }
anyhow = "=1.0"
sha2 = "=0.11"
hex = "=0.4"
libc = "=0.2"
glob = "=0.3"
regex-lite = "=0.1.9"
rust-ini = "=0.21"
zsync-rs = "=0.1.2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link-Time Optimization
codegen-units = 1    # Maximize size optimization efficiency
panic = "abort"      # Remove panic unwinding logic to save space
strip = true         # Strip symbols from binary

[dev-dependencies]
tempfile = "3"
testcontainers = { version = "=0.27.2", features = ["http_wait"] }
testcontainers-modules = "=0.15.0"
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "=0.13.2", features = ["json"] }
